[gd_scene load_steps=62 format=3 uid="uid://xmqf3ev7o6i4"]

[ext_resource type="Script" path="res://Scripts/Enemies/boss.gd" id="1_2bwnt"]
[ext_resource type="Texture2D" uid="uid://cdif0ocvvq4ro" path="res://Assets/Boss/Boss_Idle_Down.png" id="1_5y71i"]
[ext_resource type="Texture2D" uid="uid://blpa5t0fghdgv" path="res://Assets/Boss/Boss_Death.png" id="1_a56s4"]
[ext_resource type="PackedScene" uid="uid://cdlud6yskl6bd" path="res://Scenes/Enemies/boss_laser.tscn" id="2_0wv7u"]
[ext_resource type="Texture2D" uid="uid://be5oa3vflscxk" path="res://Assets/Boss/Boss_Hurt.png" id="2_6wjyw"]
[ext_resource type="Texture2D" uid="uid://dgknutebwuxv6" path="res://Assets/Boss/Boss Tell.png" id="2_jieew"]
[ext_resource type="PackedScene" uid="uid://b00n7rc3wmigr" path="res://Scenes/Enemies/enemy_shot.tscn" id="2_x3j1p"]
[ext_resource type="Texture2D" uid="uid://1aotn1lnpniq" path="res://Assets/Boss/Boss_Walking.png" id="3_mwdoi"]
[ext_resource type="Shader" path="res://Assets/Materials/ColourChange.gdshader" id="3_r7y3n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_td3e3"]
size = Vector2(20, 22)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mhb55"]
shader = ExtResource("3_r7y3n")
shader_parameter/custom_color = Color(1, 0.141176, 0.0470588, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5xl6"]
atlas = ExtResource("1_a56s4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4mrx"]
atlas = ExtResource("1_a56s4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0u86"]
atlas = ExtResource("1_a56s4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s44u"]
atlas = ExtResource("1_a56s4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3ng3"]
atlas = ExtResource("1_a56s4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d25la"]
atlas = ExtResource("1_a56s4")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mrie"]
atlas = ExtResource("1_a56s4")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dubxp"]
atlas = ExtResource("1_a56s4")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6iw4v"]
atlas = ExtResource("2_6wjyw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_inwpu"]
atlas = ExtResource("2_6wjyw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebfpr"]
atlas = ExtResource("2_6wjyw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pia1q"]
atlas = ExtResource("2_6wjyw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjl7y"]
atlas = ExtResource("2_6wjyw")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifdah"]
atlas = ExtResource("1_5y71i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sjkr"]
atlas = ExtResource("1_5y71i")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj2ko"]
atlas = ExtResource("1_5y71i")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fftel"]
atlas = ExtResource("1_5y71i")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_riktb"]
atlas = ExtResource("1_5y71i")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdbad"]
atlas = ExtResource("2_jieew")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lu4m"]
atlas = ExtResource("2_jieew")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgvq4"]
atlas = ExtResource("2_jieew")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrx2q"]
atlas = ExtResource("2_jieew")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vac2j"]
atlas = ExtResource("2_jieew")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_envk1"]
atlas = ExtResource("3_mwdoi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoh26"]
atlas = ExtResource("3_mwdoi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfma0"]
atlas = ExtResource("3_mwdoi")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiwh1"]
atlas = ExtResource("3_mwdoi")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t3xi"]
atlas = ExtResource("3_mwdoi")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yaj4n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5xl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4mrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0u86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3s44u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3ng3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d25la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mrie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dubxp")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iw4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inwpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebfpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pia1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjl7y")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifdah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sjkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj2ko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fftel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_riktb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdbad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lu4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgvq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrx2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vac2j")
}],
"loop": true,
"name": &"special_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_envk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoh26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfma0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiwh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t3xi")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_uvgtt"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_55t8f"]
resource_name = "shoot_laser"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"special_attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_u0dbt"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_klrnb"]
_data = {
"idle": SubResource("Animation_uvgtt"),
"shoot_laser": SubResource("Animation_55t8f"),
"walk": SubResource("Animation_u0dbt")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n6d0g"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_trcuh"]
blend_point_0/node = SubResource("AnimationNodeAnimation_n6d0g")
blend_point_0/pos = Vector2(0, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fr0w5"]
animation = &"shoot_laser"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_8icga"]
blend_point_0/node = SubResource("AnimationNodeAnimation_fr0w5")
blend_point_0/pos = Vector2(0, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k4fqu"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pugdp"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6ss47"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m26hn"]
animation = &"walk"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_3arug"]
blend_point_0/node = SubResource("AnimationNodeAnimation_k4fqu")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_pugdp")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_6ss47")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_m26hn")
blend_point_3/pos = Vector2(0, -1)
y_label = "-y"
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sgtd8"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_148uq"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qspky"]
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p3pi8"]
advance_mode = 2
advance_condition = &"shoot_laser"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kxgax"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b11tc"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cmdur"]
advance_mode = 2
advance_condition = &"shoot_laser"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_b58ng"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_trcuh")
states/Idle/position = Vector2(317, 100)
states/ShootLaser/node = SubResource("AnimationNodeBlendSpace2D_8icga")
states/ShootLaser/position = Vector2(394, -17)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_3arug")
states/Walk/position = Vector2(488, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_sgtd8"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_148uq"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_qspky"), "Idle", "ShootLaser", SubResource("AnimationNodeStateMachineTransition_p3pi8"), "ShootLaser", "Idle", SubResource("AnimationNodeStateMachineTransition_kxgax"), "ShootLaser", "Walk", SubResource("AnimationNodeStateMachineTransition_b11tc"), "Walk", "ShootLaser", SubResource("AnimationNodeStateMachineTransition_cmdur")]
graph_offset = Vector2(2, -79)

[node name="EnemyBoss" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 43
script = ExtResource("1_2bwnt")
BULLET_SCENE = ExtResource("2_x3j1p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_td3e3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_mhb55")
sprite_frames = SubResource("SpriteFrames_yaj4n")
animation = &"idle"
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_klrnb")
}

[node name="AnimationTree" type="AnimationTree" parent="AnimatedSprite2D"]
tree_root = SubResource("AnimationNodeStateMachine_b58ng")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/is_idle = true
parameters/conditions/is_moving = false
parameters/conditions/shoot_laser = false
parameters/Idle/blend_position = Vector2(0, 0)
parameters/ShootLaser/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="RightHand" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-9, 0)

[node name="LeftHand" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(9, 0)

[node name="Head" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -10)

[node name="BossLaser" parent="Head" instance=ExtResource("2_0wv7u")]

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="LaserTimer" to="." method="shoot_laser"]
